--- a/sample/rtmp.html
+++ b/sample/rtmp.html
@@ -23,7 +23,7 @@
 	<script type="text/javascript">
 
 		//获取url的播放地址
-		var url = GetUrlParam(v);
+		var url = GetUrlParam('url');
 		console.log(url);
 		if(!url || url == undefined){
 			url = 'rtmp://live.hkstv.hk.lxdns.com/live/hks'
