--- a/html/play.html
+++ b/html/play.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="maximum-scale=1.0, minimum-scale=1.0, user-scalable=0, initial-scale=1.0, width=device-width" />
     <meta name="format-detection" content="telephone=no, email=no, date=no, address=no">
     <title>Hello APP</title>
-    <link rel="stylesheet" type="text/css" href="../css/api.css" />
-    <link rel="stylesheet" type="text/css" href="../css/aui.css">
+  
     <style>
         .tt{
             -webkit-transform:rotate(90deg);
@@ -48,6 +47,8 @@
 		}
 
 		console.log(url);
+
+        var type = 'flv';
 
         // if(type == 'flv'){
             var videoElement = document.getElementById('videoElement');
