--- a/html/play.html
+++ b/html/play.html
@@ -3,13 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="maximum-scale=1.0, minimum-scale=1.0, user-scalable=0, initial-scale=1.0, width=device-width" />
+    <meta name="viewport"
+        content="maximum-scale=1.0, minimum-scale=1.0, user-scalable=0, initial-scale=1.0, width=device-width" />
     <meta name="format-detection" content="telephone=no, email=no, date=no, address=no">
     <title>Hello APP</title>
-  
+
     <style>
-        .tt{
-            -webkit-transform:rotate(90deg);
+        .tt {
+            -webkit-transform: rotate(90deg);
         }
     </style>
 </head>
@@ -29,78 +30,77 @@
 <script type="text/javascript" src="../script/flv.js"></script>
 
 <script type="text/javascript">
-    apiready = function() {
+    apiready = function () {
         // var params = api.pageParam;
         // var url = params['url'];
         // var url_index = url.lastIndexOf('.');
         // var type = url.substring(url_index+1,url.length);
 
-
         //获取url的播放地址
-		var url = GetUrlParam('url');
-		console.log(url);
-		if(!url || url == undefined){
-			url = 'rtmp://live.hkstv.hk.lxdns.com/live/hks'
-		}else{
-			url = decodeURIComponent(url);
-			//存在即解码
-		}
+        var url = GetUrlParam('url');
+        console.log(url);
+        if (!url || url == undefined) {
+            url = 'rtmp://live.hkstv.hk.lxdns.com/live/hks'
+        } else {
+            url = decodeURIComponent(url);
+            //存在即解码
+        }
 
-		console.log(url);
+        console.log(url);
 
         var type = 'flv';
 
-        // if(type == 'flv'){
+        if (type == 'flv') {
             var videoElement = document.getElementById('videoElement');
 
             if (flvjs.isSupported()) {
                 var flvPlayer = flvjs.createPlayer({
                     type: type,
-                    isLive:true,
+                    isLive: true,
                     url: url,
-               });
-               flvPlayer.attachMediaElement(videoElement);
-               flvPlayer.load();
-               flvPlayer.play();
+                });
+                flvPlayer.attachMediaElement(videoElement);
+                flvPlayer.load();
+                flvPlayer.play();
 
-               videoElement.onpause = function(){
-                   flvPlayer.unload();
-               };
-               videoElement.onplay = function(){
-                   flvPlayer.load();
-                   flvPlayer.play();
-               }
-        //    }
-       }else{
-           var videoElement = document.getElementById('videoElement');
-           videoElement.src=url;
-           videoElement.load();
-           videoElement.play();
-       }
+                videoElement.onpause = function () {
+                    flvPlayer.unload();
+                };
+                videoElement.onplay = function () {
+                    flvPlayer.load();
+                    flvPlayer.play();
+                }
+            }
+        } else {
+            var videoElement = document.getElementById('videoElement');
+            videoElement.src = url;
+            videoElement.load();
+            videoElement.play();
+        }
     };
 
 
     function GetUrlParam(paraName) {
-			var url = document.location.toString();
-			var arrObj = url.split("?");
+        var url = document.location.toString();
+        var arrObj = url.split("?");
 
-			if (arrObj.length > 1) {
-				var arrPara = arrObj[1].split("&");
-				var arr;
+        if (arrObj.length > 1) {
+            var arrPara = arrObj[1].split("&");
+            var arr;
 
-				for (var i = 0; i < arrPara.length; i++) {
-					arr = arrPara[i].split("=");
+            for (var i = 0; i < arrPara.length; i++) {
+                arr = arrPara[i].split("=");
 
-					if (arr != null && arr[0] == paraName) {
-						return arr[1];
-					}
-				}
-				return "";
-			}
-			else {
-				return "";
-			}
-		}
+                if (arr != null && arr[0] == paraName) {
+                    return arr[1];
+                }
+            }
+            return "";
+        }
+        else {
+            return "";
+        }
+    }
 </script>
 
 </html>
