--- a/html/play.html
+++ b/html/play.html
@@ -30,7 +30,9 @@
 <script type="text/javascript" src="../script/flv.js"></script>
 
 <script type="text/javascript">
-    apiready = function () {
+    console.log('------');
+
+    //apiready = function () {
         // var params = api.pageParam;
         // var url = params['url'];
         // var url_index = url.lastIndexOf('.');
@@ -77,7 +79,7 @@
             videoElement.load();
             videoElement.play();
         }
-    };
+   // };
 
 
     function GetUrlParam(paraName) {
