--- a/html/p.html
+++ b/html/p.html
@@ -35,7 +35,7 @@
     console.log('44444');
     if (flvjs.isSupported()) {
         var flvPlayer = flvjs.createPlayer({
-            type: type,
+            type: 'flv',
             isLive: true,
             url: 'http://play.zhifengwangluo.com/abc/test.flv?auth_key=1557126408-0-0-68011273253fe5a65b1b4a1e8439678a',
         });
