--- a/play.html
+++ b/play.html
@@ -9,19 +9,37 @@
     <link rel="stylesheet" href="https://g.alicdn.com/de/prismplayer/2.8.1/skins/default/aliplayer-min.css" />
     <script charset="utf-8" type="text/javascript"
         src="https://g.alicdn.com/de/prismplayer/2.8.1/aliplayer-min.js"></script>
+    <script charset="utf-8" type="text/javascript" src="/public/jquery-3.3.1.min.js"></script>
+
 </head>
 
 <body>
     <div class="prism-player" id="J_prismPlayer"></div>
     <script>
+        var url = '';
+        $.ajax({
+            url: "https://zhibo.zhifengwangluo.com/index/index/flv",
+            type: 'get',
+
+            success: function (res) {
+                url = res;
+            },
+            error: function (res) {
+                alert(res);
+            }
+        })
+
+
+
         var player = new Aliplayer({
             id: 'J_prismPlayer',
             width: '100%',
             autoplay: true,
             //支持播放地址播放,此播放优先级最高
 
-            source: 'http://img.ksbbs.com/asset/Mon_1703/05cacb4e02f9d9e.mp4',
-            
+            source : url,
+            // source: 'http://img.ksbbs.com/asset/Mon_1703/05cacb4e02f9d9e.mp4',
+
             /*
             //播放方式二：点播用户推荐
             vid: '1e067a2831b641db90d570b6480fbc40',
