--- a/play.html
+++ b/play.html
@@ -16,18 +16,19 @@
 <body>
     <div class="prism-player" id="J_prismPlayer"></div>
     <script>
-        var url = '';
-        $.ajax({
-            url: "https://zhibo.zhifengwangluo.com/index/index/flv",
-            type: 'get',
+        var url = 'http://play.zhifengwangluo.com/dc/user56895.m3u8?auth_key=1557157678-0-0-bb98df5d61f4e345128fad064798f1fd';
+        
+        // $.ajax({
+        //     url: "https://zhibo.zhifengwangluo.com/index/index/flv",
+        //     type: 'get',
 
-            success: function (res) {
-                url = res;
-            },
-            error: function (res) {
-                alert(res);
-            }
-        })
+        //     success: function (res) {
+        //         url = res;
+        //     },
+        //     error: function (res) {
+        //         alert(res);
+        //     }
+        // })
 
 
 
